--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,9 @@ body {
   --bg-icon-features: #f5f4fa;
   --social-color: #afb1b8;
   --sosial-bg-footer-color: rgba(255, 255, 255, 0.1);
+  --transition-time-hover: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --transition-time-btn-hover: background-color 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p,
@@ -103,10 +106,25 @@ img {
 .header-link {
   text-decoration: none;
   color: var(--title-color);
+  transition: var(--transition-time-hover);
 }
 .header-link:hover,
 .header-link:focus {
   color: var(--accent-color);
+}
+.current-link {
+  padding-bottom: 32px;
+  position: relative;
+}
+.current-link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: var(--accent-color);
+  border-radius: 2px;
+  position: absolute;
+  bottom: 0;
 }
 .contacts-mail,
 .contacts-tel {
@@ -117,6 +135,7 @@ img {
   color: var(--text-color);
   text-decoration: none;
   background-color: var(--white-color);
+  transition: var(--transition-time-hover);
 }
 .contacts-mail:hover,
 .contacts-mail:focus {
@@ -196,10 +215,11 @@ img {
   display: block;
   margin: 0 auto;
   border: none;
+  transition: var(--transition-time-btn-hover);
 }
 .button:focus,
 .button:hover {
-  background: var(--button-hover);
+  background-color: var(--button-hover);
 }
 /*---------------------------------Section features--------------------------*/
 .features {
@@ -258,6 +278,24 @@ img {
   letter-spacing: 0.03em;
   color: var(--title-color);
   margin-bottom: 50px;
+}
+.work-item {
+  position: relative;
+}
+.work-top-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+  background-color: rgba(47, 48, 58, 0.8);
+  width: 370px;
+  height: 70px;
+  padding: 27px 107px;
+  position: absolute;
+  bottom: 0;
 }
 
 /*------------OUR TEAM---------*/
@@ -319,6 +357,8 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-social {
   fill: var(--social-color);
@@ -362,6 +402,8 @@ img {
   align-items: center;
   justify-content: center;
   color: #afb1b8;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover,
 .clients-link:focus {
@@ -392,6 +434,7 @@ img {
   color: var(--white-color);
   text-decoration: none;
   display: block;
+  transition: var(--transition-time-hover);
 }
 .address-map:hover,
 .address-map:focus {
@@ -405,6 +448,7 @@ img {
   color: var(--contacts-color);
   text-decoration: none;
   display: block;
+  transition: var(--transition-time-hover);
 }
 .address-contacts:hover,
 .address-contacts:focus {
@@ -452,6 +496,8 @@ img {
   align-items: center;
   justify-content: center;
   background-color: var(--sosial-bg-footer-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-social-footer {
   fill: var(--white-color);
@@ -498,15 +544,18 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-color);
-  background: var(--portfolio-button-color);
+  background-color: var(--portfolio-button-color);
   border-radius: 4px;
   border: none;
   padding: 6px 22px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-portfolio:hover,
 .button-portfolio:focus {
   color: var(--white-color);
-  background: var(--accent-color);
+  background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -577,7 +626,7 @@ img {
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
-  transition: opacity 300ms linear, visibility 300ms linear;
+  transition: opacity 300ms linear, visibility 250ms linear;
 }
 .modal {
   width: 528px;
