--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ img {
   background: var(--accent-color);
   border-radius: 2px;
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
 }
 .contacts-mail,
 .contacts-tel {
@@ -171,7 +171,7 @@ img {
 .hero {
   background-color: var(--hero-bg-color);
   padding-top: 200px;
-  padding-bottom: 280px;
+  padding-bottom: 200px;
   max-width: 1600px;
   height: 600px;
   margin: 0 auto;
@@ -293,7 +293,7 @@ img {
   background-color: rgba(47, 48, 58, 0.8);
   width: 370px;
   height: 70px;
-  padding: 27px 107px;
+  padding: 27px;
   position: absolute;
   bottom: 0;
 }
@@ -589,6 +589,7 @@ img {
   background: rgba(33, 150, 243, 0.9);
   height: 100%;
   transform: translateY(100%);
+  transition: transform 250ms linear;
 }
 
 .projects-title {
@@ -609,6 +610,7 @@ img {
 .projects-link {
   text-decoration: none;
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .projects-link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -655,6 +657,7 @@ img {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  padding: 0;
 }
 .backdrop.is-hidden {
   opacity: 0;
